@@ -189,6 +189,16 @@ name|isLeader
 init|=
 literal|false
 decl_stmt|;
+comment|// set to true once a core has registered in zk
+comment|// set to false on detecting a session expiration
+DECL|field|hasRegistered
+specifier|private
+specifier|volatile
+name|boolean
+name|hasRegistered
+init|=
+literal|false
+decl_stmt|;
 DECL|field|lastPublished
 specifier|volatile
 name|Replica
@@ -393,6 +403,32 @@ operator|.
 name|isLeader
 operator|=
 name|isLeader
+expr_stmt|;
+block|}
+DECL|method|hasRegistered
+specifier|public
+name|boolean
+name|hasRegistered
+parameter_list|()
+block|{
+return|return
+name|hasRegistered
+return|;
+block|}
+DECL|method|setHasRegistered
+specifier|public
+name|void
+name|setHasRegistered
+parameter_list|(
+name|boolean
+name|hasRegistered
+parameter_list|)
+block|{
+name|this
+operator|.
+name|hasRegistered
+operator|=
+name|hasRegistered
 expr_stmt|;
 block|}
 DECL|method|setShardId
