@@ -11,6 +11,9 @@ operator|.
 name|cloud
 package|;
 end_package
+begin_comment
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
 begin_import
 import|import
 name|java
@@ -125,6 +128,21 @@ operator|.
 name|SolrException
 operator|.
 name|ErrorCode
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
+name|ClusterState
 import|;
 end_import
 begin_import
@@ -482,9 +500,6 @@ operator|.
 name|LoggerFactory
 import|;
 end_import
-begin_comment
-comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
-end_comment
 begin_class
 DECL|class|ElectionContext
 specifier|public
@@ -2371,6 +2386,11 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+name|publishActiveIfRegisteredAndNotActive
+argument_list|(
+name|core
+argument_list|)
+expr_stmt|;
 block|}
 name|log
 operator|.
@@ -2510,6 +2530,136 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
+block|}
+block|}
+DECL|method|publishActiveIfRegisteredAndNotActive
+specifier|public
+name|void
+name|publishActiveIfRegisteredAndNotActive
+parameter_list|(
+name|SolrCore
+name|core
+parameter_list|)
+throws|throws
+name|KeeperException
+throws|,
+name|InterruptedException
+block|{
+if|if
+condition|(
+name|core
+operator|.
+name|getCoreDescriptor
+argument_list|()
+operator|.
+name|getCloudDescriptor
+argument_list|()
+operator|.
+name|hasRegistered
+argument_list|()
+condition|)
+block|{
+name|ZkStateReader
+name|zkStateReader
+init|=
+name|zkController
+operator|.
+name|getZkStateReader
+argument_list|()
+decl_stmt|;
+name|zkStateReader
+operator|.
+name|updateClusterState
+argument_list|()
+expr_stmt|;
+name|ClusterState
+name|clusterState
+init|=
+name|zkStateReader
+operator|.
+name|getClusterState
+argument_list|()
+decl_stmt|;
+name|Replica
+name|rep
+init|=
+operator|(
+name|clusterState
+operator|==
+literal|null
+operator|)
+condition|?
+literal|null
+else|:
+name|clusterState
+operator|.
+name|getReplica
+argument_list|(
+name|collection
+argument_list|,
+name|leaderProps
+operator|.
+name|getStr
+argument_list|(
+name|ZkStateReader
+operator|.
+name|CORE_NODE_NAME_PROP
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|rep
+operator|!=
+literal|null
+operator|&&
+name|rep
+operator|.
+name|getState
+argument_list|()
+operator|!=
+name|Replica
+operator|.
+name|State
+operator|.
+name|ACTIVE
+operator|&&
+name|rep
+operator|.
+name|getState
+argument_list|()
+operator|!=
+name|Replica
+operator|.
+name|State
+operator|.
+name|RECOVERING
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"We have become the leader after core registration but are not in an ACTIVE state - publishing ACTIVE"
+argument_list|)
+expr_stmt|;
+name|zkController
+operator|.
+name|publish
+argument_list|(
+name|core
+operator|.
+name|getCoreDescriptor
+argument_list|()
+argument_list|,
+name|Replica
+operator|.
+name|State
+operator|.
+name|ACTIVE
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|checkLIR
